[package]
name = "http_to_socks"
version = "0.1.0"
authors = ["Shirshak <8097377+shirshak55@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-socks5 = "0.3.0"
hyper = {version = "0.13.1",features=["default","stream"]}
tokio ={version= "0.2.10",features=["full"]}
http = "0.2.0"
futures = "0.3.1"
futures-util = "0.3.1"

